[package]
name = "camel"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "Supports bidirectional conversion of variable strings between common naming formats."
documentation = "https://docs.rs/camel"
readme = "README.md"
homepage = "https://github.com/un-rust/camel"
repository = "https://github.com/un-rust/camel"
license = "Apache-2.0"
keywords = [ ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
urlogger = "1.0.0"
